--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>About Us</h1>
-    <p>hii i am about page.</p>
+    <p>hii i am about page 1.</p>
+        <p>hii i am about page 2.</p>
 </body>
 </html>
